--- a/style.css
+++ b/style.css
@@ -8,6 +8,37 @@
 
 html {
 	font-size:12px;
+    font-family: "Fira Sans", sans-serif;
+}
+
+body {
+    font-family: "Fira Sans", sans-serif;
+}
+
+#herospace {
+    width:100%;
+    max-width: 1024px;
+    min-width: 100%;
+    min-height: 40rem;
+    background-repeat: no-repeat;
+    background-size:fill;
+    background-position: center top;
+    background-attachment: fixed;
+}
+
+div.featured-image {
+    float:left;
+}
+
+div.main {
+    width: 75%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+h1.category {
+    font-family: "Fira Sans", sans-serif;
+    font-size: 2.5rem;
 }
 
 @media (max-width:800px) {
