updating contact us page

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 
 #location-map {
     width:100%;
-    height:20rem;
+    height:30rem;
 }
 
 #herospace {
@@ -102,6 +102,11 @@ div.logo {
     position: absolute;
     left:0;
     top:30%;
+}
+
+.logo a, a:hover {
+    color:#000000;
+    text-decoration: none;
 }
 
 div.category {
