--- a/style.css
+++ b/style.css
@@ -48,6 +48,16 @@ body {
     background-size: cover;
 }
 
+div.related-destinations {
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+div.related-destination {
+    display: inline-block;
+}
+
 div.content {
     width:75%;
     padding-top:10rem;
