--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ a:active {
 h1.no-hero {
     top:9rem;
     position: relative;
+    font-weight: normal;
 }
 
 #mobile-device {
@@ -97,12 +98,18 @@ h1.post_title {
     margin-left: auto;
     margin-right: auto;
     font-size:4rem;
+    font-weight: normal;
+}
+
+h4.related-destinations {
+    padding-left:1rem;
 }
 
 div.related-destinations {
     width: 75%;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 7rem;
 }
 
 div.related-destination {
@@ -110,18 +117,26 @@ div.related-destination {
     padding: 0.5rem 1rem 0.5rem 1rem;
 }
 
+div.related-destination-img {
+    height:12.5rem;
+    width: auto;
+    display: inline-block;
+    overflow: hidden;
+}
+
 h5.related-destination-title {
     width:100%;
     text-align: center;
+    font-weight: normal;
 }
 
 div.content {
     width:75%;
-    padding-top:10rem;
-    max-width:2000px;
+    padding-top:7rem;
+    max-width:900px;
     margin-right: auto;
     margin-left: auto;
-    padding-bottom: 10rem;
+    padding-bottom: 7rem;
 }
 
 img.size-large {
@@ -151,7 +166,7 @@ div.main {
 
 div.footer {
     width:75%;
-    max-width: 2000px;
+    max-width: 900px;
     margin-left:auto;
     margin-right:auto;
     margin-top:10rem;
@@ -161,7 +176,7 @@ div.footer {
 }
 
 img.member-logos {
-    height:8rem;
+    height:5rem;
     width:auto;
     padding: 0rem 1rem 0rem 1rem;
     display: inline-block;
@@ -178,6 +193,7 @@ div.top-bar {
     width:75%;
     margin-left: auto;
     margin-right:auto;
+    max-width: 900px;
     height:10rem;
     position: relative;
 }
@@ -198,7 +214,7 @@ div.logo {
 }
 
 div.category {
-    padding-top: 5rem;
+    padding-top: 3rem;
 }
 
 div.category-content {
@@ -215,6 +231,7 @@ div.featured-image {
 h1 {
     font-family: "Fira Sans", sans-serif;
     font-size: 2.5rem;
+    font-weight: normal;
 }
 
 ul.category-title-list {
@@ -252,9 +269,9 @@ div.newsletter {
     margin-left: auto;
     margin-right: auto;
     width:60%;
-    padding-top: 10rem;
-    padding-bottom: 10rem;
-    max-width: 1024px;
+    padding-top: 7rem;
+    padding-bottom: 7rem;
+    max-width: 900px;
 }
 
 p.subscription-text1 {
@@ -276,8 +293,15 @@ div.newsletter-input {
     display:none;
 }
 
+div.newsletter-content {
+    width:100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 input.newsletter-email {
     width: 70%;
+    max-width:450px;
     height: 3rem;
     border-radius: 3px;
     padding-left: 1rem;
@@ -289,10 +313,10 @@ input.newsletter-email {
 
 input.newsletter-submit {
     width: 20%;
+    max-width: 120px;
     height: 3rem;
-    border-radius: 8px;
     background: #4A90E2;
-    border: 1px solid #979797;
+    border: none;
     color: #ffffff;
     margin-left: 1rem;
 }
@@ -303,10 +327,9 @@ input.newsletter-submit {
     padding: 0;
     border: 0;
     width: 60%;
-    max-width: 2000px;
     height:inherit;
     background: #ffffff;
-    font-size: 12px;
+    font-size: 1.3rem;
     display:table;
     position: absolute;
     right:0;
@@ -389,7 +412,9 @@ input.newsletter-submit {
 
 .menu-main-nav-container ul ul {
     text-transform: none;
-    min-width: 190px;
+    min-width: 290px;
+    max-width: 290px;
+
 }
 .menu-main-nav-container ul ul a {
     color: #000000;
