--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ h1.no-hero {
     position: relative;
     font-weight: normal;
     width: 75%;
-    max-width: 900px;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -102,11 +102,17 @@ h1.no-hero {
     height:100%;
 }
 
+div.excerpt {
+    font-size: 1.5rem;
+    font-weight: normal;
+    padding-top: 1rem;
+}
+
 div.post_title {
     position: relative;
     width: 75%;
     height: 100%;
-    max-width: 900px;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -127,7 +133,7 @@ h4.related-destinations {
 
 div.related-destinations {
     width: 75%;
-    max-width: 900px;
+    max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
     padding-top: 7rem;
@@ -154,7 +160,7 @@ h5.related-destination-title {
 div.content {
     width:75%;
     padding-top:7rem;
-    max-width:900px;
+    max-width:1000px;
     margin-right: auto;
     margin-left: auto;
     padding-bottom: 7rem;
@@ -187,7 +193,7 @@ div.main {
 
 div.footer {
     width:75%;
-    max-width: 900px;
+    max-width: 1000px;
     margin-left:auto;
     margin-right:auto;
     margin-top:10rem;
@@ -214,7 +220,7 @@ div.top-bar {
     width:75%;
     margin-left: auto;
     margin-right:auto;
-    max-width: 900px;
+    max-width: 1000px;
     height:10rem;
     position: relative;
 }
@@ -292,7 +298,7 @@ div.newsletter {
     width:60%;
     padding-top: 7rem;
     padding-bottom: 7rem;
-    max-width: 900px;
+    max-width: 1000px;
 }
 
 p.subscription-text1 {
@@ -344,6 +350,20 @@ input.newsletter-submit {
 
 
 /*  Menu bar css styling  */
+
+.responsive-menu {
+    background-color:#000000;
+}
+
+
+#responsive-menu div {
+    background-color:#000000;
+}
+
+#responsive-menu li {
+    background-color:#000000;
+}
+
 .menu-main-nav-container {
     padding: 0;
     border: 0;
@@ -494,8 +514,25 @@ input.newsletter-submit {
 }
 
 
-    /* css for mobile devices */
+/* css for mobile devices */
 @media (max-width:1000px) {
+
+    html {
+        font-size: 1em;
+    }
+
+    h1 {
+        font-size: 4rem;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+        padding-left: 0.5rem;
+        padding-bottom: 0.5rem;
+    }
+
+    p {
+        padding-left: 0.5rem;
+    }
 
     div.top-bar {
         width:100%;
@@ -515,8 +552,73 @@ input.newsletter-submit {
         height:20rem;
     }
 
+    div.content {
+        padding-top: 1rem;
+        width:100%;
+        max-width: 100%;
+    }
+
+    div.excerpt {
+        padding-top: 3rem;
+    }
+
+    div.logo {
+        width: 100%;
+        padding-left:1rem;
+    }
+
+    div.related-destinations {
+        width: 100%;
+    }
+
+    div.related-destinations-content {
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    div.related-destination {
+        width: 100%;
+    }
+
+    div.related-destination-img {
+        width: 100%;
+        height: 11rem;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    div.related-destination-img img {
+        width: 18rem;
+    }
+
+    h5.related-destination-title {
+        text-align: left;
+    }
+
+    h1.no-hero {
+        top: 3rem;
+        position: relative;
+        font-weight: normal;
+        width: 100%;
+    }
+
+    #click-menu {
+        top:3rem !important;
+    }
+
+    #responsive-menu li {
+        font-size: 1.5rem !important;
+    }
+
     .menu-main-nav-container {
-        /*width: 100%;*/
+        width: 0;
+    }
+
+
+    .menu-main-nav-container ul li.menu-item-has-children > a:after {
+        content: '';
+        margin-left: 5px;
     }
 
     #herospace {
@@ -530,7 +632,7 @@ input.newsletter-submit {
     div.featured-image {
         float:none;
         width:100%;
-        height: 20rem;
+        height: 30rem;
         overflow:hidden;
     }
 
@@ -550,17 +652,13 @@ input.newsletter-submit {
     }
 
     ul.category-title-list {
-        /*margin: 0 0 0 0;
-        vertical-align:middle;
-        font-size: 1.5rem;
-        list-style: none;
-        display:table-cell;
-        padding-left: 0;*/
+        font-size: 2.5rem;
     }
 
-    .category-title-list li {
 
+    .category-title-list li {
         width:100%;
+        line-height: 6rem;
     }
 
     .category-title-list li:first-child {
