--- a/style.css
+++ b/style.css
@@ -24,18 +24,11 @@ body {
     padding: 0;
 }
 
-.image-caption {
-    position: absolute;
-    bottom: 0.1rem;
-    right: 0.25rem;
-    font-size: 0.75rem;
-}
-
 .wp-caption {
     position:relative;
 }
 
-p.wp-caption-text {
+p.wp-caption-text, p.image-caption {
     position: absolute;
     right: 1rem;
     bottom: -1.2rem;
@@ -120,7 +113,7 @@ h1.no-hero {
     /*background-attachment: fixed;*/
     background-size: cover;
     position: relative;
-    overflow: hidden;
+    overflow: visible;
 }
 
 .layer {
