--- a/style.css
+++ b/style.css
@@ -324,13 +324,18 @@ p.footer {
 }
 
 div.top-bar {
+    width:100%;
+    height:7rem;
+    position: relative;
+    padding-top:1.8rem;
+    background-color:#FFFFFF;
+}
+
+div.top-bar-content {
     width:75%;
     margin-left: auto;
     margin-right:auto;
     max-width: 1000px;
-    height:7rem;
-    position: relative;
-    padding-top:1.8rem;
 }
 
 div.logo {
@@ -342,18 +347,19 @@ div.logo {
     padding-top: 0px;
 }
 
-
 .logo h1 {
     font-family: "BlackChancery", sans-serif;
     font-size: 1.8rem;
     margin-top: 0rem;
     letter-spacing: 0.15rem;
+    color:#2B60DE;
 }
 
 .logo h6 {
     font-size: 0.7rem;
     text-align: center;
     font-weight: 300;
+    color:#2B60DE;
 }
 
 .logo a, a:hover, h1 {
@@ -564,7 +570,8 @@ input.newsletter-submit {
     display: block;
     line-height: 1em;
     text-decoration: none;
-    color:#000000;
+    color:#000;
+    padding: 0 12px;
 }
 
 .menu-main-nav-container > ul {
@@ -576,10 +583,6 @@ input.newsletter-submit {
     content: '';
     display: block;
     clear: both;
-}
-.menu-main-nav-container a {
-    color: #000000;
-    padding: 0 12px;
 }
 
 .menu-main-nav-container ul ul {
