changing blue on submit button

--- a/style.css
+++ b/style.css
@@ -469,7 +469,7 @@ input.newsletter-submit {
     width: 20%;
     max-width: 120px;
     height: 3rem;
-    background: #4A90E2;
+    background: #2B60DE;
     border: none;
     color: #ffffff;
     margin-left: 1rem;
