--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ strong {
 }
 
 #destinations-contact-us {
-    background: #4A90E2;
+    background: #2B60DE;
     width:260px;
     margin: -3rem auto 3rem auto;
     text-align: center;
