--- a/style.css
+++ b/style.css
@@ -423,6 +423,15 @@ div.category-titles {
     display:table;
 }
 
+div.testimonials {
+    max-height: 10rem;
+    width:75%;
+    max-width:1000px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top:3rem;
+}
+
 div.newsletter {
     margin-left: auto;
     margin-right: auto;
